--- a/INITIAL_MODELS.yaml
+++ b/INITIAL_MODELS.yaml
@@ -4,6 +4,74 @@ sd-1/main/stable-diffusion-v1-5:
    repo_id: runwayml/stable-diffusion-v1-5
    recommended: True
    default: True
+sd-1/main/stable-diffusion-inpainting:
+   description: RunwayML SD 1.5 model optimized for inpainting, diffusers version (4.27 GB)
+   repo_id: runwayml/stable-diffusion-inpainting
+   recommended: False
+sd-2/main/stable-diffusion-2-1:
+   description: Stable Diffusion version 2.1 diffusers model, trained on 768 pixel images (5.21 GB)
+   repo_id: stabilityai/stable-diffusion-2-1
+   recommended: False
+sd-2/main/stable-diffusion-2-inpainting:
+   description: Stable Diffusion version 2.0 inpainting model (5.21 GB)
+   repo_id: stabilityai/stable-diffusion-2-inpainting
+   recommended: False
+sdxl/main/stable-diffusion-xl-base-0-9:
+   description: Stable Diffusion XL base model (12 GB; access token required)
+   repo_id: stabilityai/stable-diffusion-xl-base-0.9
+   recommended: False
+sdxl-refiner/main/stable-diffusion-xl-refiner-0-9:
+   description: Stable Diffusion XL refiner model (12 GB; access token required)
+   repo_id: stabilityai/stable-diffusion-xl-refiner-0.9
+   recommended: False
+sdxl/main/stable-diffusion-xl-base-1-0:
+   description: Stable Diffusion XL base model (12 GB; access token required)
+   repo_id: stabilityai/stable-diffusion-xl-base-1.0
+   recommended: False
+sdxl-refiner/main/stable-diffusion-xl-refiner-1-0:
+   description: Stable Diffusion XL refiner model (12 GB; access token required)
+   repo_id: stabilityai/stable-diffusion-xl-refiner-1.0
+   recommended: False
+sd-1/main/Analog-Diffusion:
+   description: An SD-1.5 model trained on diverse analog photographs (2.13 GB)
+   repo_id: wavymulder/Analog-Diffusion
+   recommended: False
+sd-1/main/Deliberate:
+   description: Versatile model that produces detailed images up to 768px (4.27 GB)
+   repo_id: XpucT/Deliberate
+   recommended: False
+sd-1/main/Dungeons-and-Diffusion:
+   description: Dungeons & Dragons characters (2.13 GB)
+   repo_id: 0xJustin/Dungeons-and-Diffusion
+   recommended: False
+sd-1/main/dreamlike-photoreal-2:
+   description: A photorealistic model trained on 768 pixel images based on SD 1.5 (2.13 GB)
+   repo_id: dreamlike-art/dreamlike-photoreal-2.0
+   recommended: False
+sd-1/main/Inkpunk-Diffusion:
+   description: Stylized illustrations inspired by Gorillaz, FLCL and Shinkawa; prompt with "nvinkpunk" (4.27 GB)
+   repo_id: Envvi/Inkpunk-Diffusion
+   recommended: False
+sd-1/main/openjourney:
+   description: An SD 1.5 model fine tuned on Midjourney; prompt with "mdjrny-v4 style" (2.13 GB)
+   repo_id: prompthero/openjourney
+   recommended: False
+sd-1/main/portraitplus:
+   description: An SD-1.5 model trained on close range portraits of people; prompt with "portrait+" (2.13 GB)
+   repo_id: wavymulder/portraitplus
+   recommended: False
+sd-1/main/seek.art_MEGA:
+   repo_id: coreco/seek.art_MEGA
+   description: A general use SD-1.5 "anything" model that supports multiple styles (2.1 GB)
+   recommended: False
+sd-1/main/trinart_stable_diffusion_v2:
+   description: An SD-1.5 model finetuned with ~40K assorted high resolution manga/anime-style images (2.13 GB)
+   repo_id: naclbit/trinart_stable_diffusion_v2
+   recommended: False
+sd-1/main/waifu-diffusion:
+   description: An SD-1.5 model trained on 680k anime/manga-style images (2.13 GB)
+   repo_id: hakurei/waifu-diffusion
+   recommended: False
 sd-1/controlnet/canny:
    repo_id: lllyasviel/control_v11p_sd15_canny
    recommended: False
@@ -45,4 +113,10 @@ sd-1/controlnet/tile:
    recommended: False
 sd-1/controlnet/ip2p:
    repo_id: lllyasviel/control_v11e_sd15_ip2p
+   recommended: False
+sd-1/embedding/ahx-beta-453407d:
+   repo_id: sd-concepts-library/ahx-beta-453407d
+   recommended: False
+sd-1/lora/Ink scenery:
+   path: https://civitai.com/api/download/models/83390
    recommended: False
